# fused-effects-pool

./: CHANGELOG.md  README.md  fused-effects-pool.cabal
src/: FusedEffectsPool.hs
src/Control/Carrier/: Pool.hs
src/Control/Effect/: Pool.hs
