cabal-version:       2.0
name:                fused-effects-pool
version:             0.0.0.0
synopsis:            An effect providing a pool of resources.
description:         An effect providing a pool of resources.
homepage:            https://github.com/patrickt/fused-effects-pool
bug-reports:         https://github.com/patrickt/fused-effects-pool/issues
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2020 Patrick Thomson
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/patrickt/fused-effects-pool.git

library
  hs-source-dirs:      src
  exposed-modules:     Control.Carrier.Pool
                       Control.Effect.Pool


  build-depends:       base ^>= 4.13.0.0
                     , fused-effects ^>= 1
                     , fused-effects-exceptions ^>= 1
                     , resource-pool ^>= 0.2.3.2
                     , time
                     , transformers



  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

test-suite fused-effects-pool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.13.0.0
                     , fused-effects-pool


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
